// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddLicenseForm template does not show radio button descriptions, if licenseComplianceDeniesMr feature flag is disabled 1`] = `
<gl-form-radio-stub
  aria-describedby="js-approved-license-radio"
  class=""
  data-qa-selector="approved_license_radio"
  value="approved"
>
  
        Allow
        
  <!---->
</gl-form-radio-stub>
`;

exports[`AddLicenseForm template does not show radio button descriptions, if licenseComplianceDeniesMr feature flag is disabled 2`] = `
<gl-form-radio-stub
  aria-describedby="js-blacklisted-license-radio"
  class=""
  data-qa-selector="blacklisted_license_radio"
  value="blacklisted"
>
  
        Deny
        
  <!---->
</gl-form-radio-stub>
`;
